<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/content_description_logo"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/logo" />

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/accent_color"
        android:orientation="vertical"
        android:layout_below="@id/logo"
        android:layout_marginTop="50dp"
        >

        <ImageView
            android:id="@+id/user_icon"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_marginTop="10dp"
            android:adjustViewBounds="true"
            android:maxWidth="50dp"
            android:maxHeight="110dp"
            android:src="@drawable/user_icon" />

        <TextView
            android:id="@+id/loginText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_with_beetrue_account"
            android:textStyle="bold"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            />

        <EditText
            android:id="@+id/etEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:background="@drawable/rounded_corner"
            android:layout_marginHorizontal="50dp"
            android:padding="5dp"/>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:background="@drawable/rounded_corner"
            android:inputType="textPassword"
            android:layout_marginHorizontal="50dp"
            android:padding="5dp"/>

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_login_text"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="75dp"
            android:backgroundTint="@color/button_color"
            />

        <TextView
            android:id="@+id/txtForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password_text"
            android:gravity="center"/>

        <TextView
            android:id="@+id/txtNoAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_account_text"
            android:gravity="center"/>

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_signup_text"
            android:layout_marginHorizontal="75dp"
            android:backgroundTint="@color/button_color"
            android:textStyle="bold"/>

    </LinearLayout>

</RelativeLayout>