<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".RegisterUser">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/content_description_logo"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/logo" />

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/accent_color"
        android:orientation="vertical"
        android:layout_below="@id/logo"
        android:layout_marginTop="50dp"
        >

        <ImageView
            android:id="@+id/user_icon"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_marginTop="10dp"
            android:adjustViewBounds="true"
            android:maxWidth="50dp"
            android:maxHeight="110dp"
            android:src="@drawable/user_icon" />

        <TextView
            android:id="@+id/loginText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_account_text"
            android:textStyle="bold"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/etFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="100dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/rounded_corner"
                    android:ems="10"
                    android:hint="@string/hint_first_name"
                    android:inputType="textPersonName"
                    android:padding="5dp"/>

                <EditText
                    android:id="@+id/etLastName"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="100dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/rounded_corner"
                    android:ems="10"
                    android:hint="@string/hint_last_name"
                    android:inputType="textPersonName"
                    android:padding="5dp"/>

                <EditText
                    android:id="@+id/etEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="100dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/rounded_corner"
                    android:ems="10"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:padding="5dp" />

                <EditText
                    android:id="@+id/etUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="100dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/rounded_corner"
                    android:ems="10"
                    android:hint="@string/hint_username"
                    android:inputType="text"
                    android:padding="5dp"/>

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="100dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/rounded_corner"
                    android:ems="10"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:padding="5dp" />

                <EditText
                    android:id="@+id/etConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="100dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/rounded_corner"
                    android:ems="10"
                    android:hint="@string/hint_confirm_passowrd"
                    android:inputType="textPassword"
                    android:padding="5dp" />


                <Button
                    android:id="@+id/btnSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="75dp"
                    android:layout_marginTop="15dp"
                    android:backgroundTint="@color/button_color"
                    android:text="@string/button_signup_text"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtNoAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/already_have_account_text" />

                <Button
                    android:id="@+id/btnLogIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="75dp"
                    android:backgroundTint="@color/button_color"
                    android:text="@string/button_login_text"
                    android:textStyle="bold"
                    android:layout_marginBottom="15dp"/>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</RelativeLayout>